<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:id="@+id/layout"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#abc"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/competition_img_desc"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/excel_logo2" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:gravity="center"
        android:text="@string/competition_default_title"
        android:shadowColor="@color/competition_title_color_bg"
        android:shadowRadius="7.0"
        android:textColor="@color/competition_title_color"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/department"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:shadowColor="@color/competition_subtitle_color_bg"
        android:shadowRadius="7.0"
        android:text="@string/competition_default_dept"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/competition_subtitle_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/competition_default_cat"
        android:shadowColor="@color/competition_subtitle_color_bg"
        android:shadowRadius="7.0"
        android:textColor="@color/competition_subtitle_color"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />
</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
